--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^6.8.8",
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "@types/elasticsearch": "^5.0.40",
+    "http-aws-es": "^6.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -22,7 +25,7 @@
     "aws-sdk": "^2.1019.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
-    "serverless-esbuild": "^1.17.1",
+    "serverless-bundle": "^5.3.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
