add elasticsearch indexing
for this to work, requests needs to be signed.
references:
https://www.titanwolf.org/Network/q/7d08a4f7-e0de-4065-ad4a-0a1c4e867184/y
https://github.com/aws/aws-sdk-js-v3/issues/2099

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
     "@types/elasticsearch": "^5.0.40",
+    "@acuris/aws-es-connection": "^2.3.0",
     "http-aws-es": "^6.0.0",
     "uuid": "^8.3.2"
   },
