--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^14.14.25",
     "@types/uuid": "^8.3.1",
     "aws-sdk": "^2.1019.0",
+    "jimp": "^0.16.1",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-bundle": "^5.3.0",
