--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/elasticsearch": "^5.0.40",
     "@acuris/aws-es-connection": "^2.3.0",
     "http-aws-es": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
