--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-xray-sdk": "^3.3.4",
     "http-aws-es": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "serverless-dynamodb-local": "^0.2.40",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.23.0",
     "serverless-bundle": "^5.3.0",
+    "serverless-offline": "^8.5.0",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
